Fix (pswrite): %%BoundingBox comment geenration    (ps2write): media selection and %%BoundingBox generation

Details:
bug #690236 "Ghostscript is not able to convert PDF to PostScript
maintaining the input document's page sizes"

The pswrite bug is actually in the consuming applications, which are unable to
process the media selection requests in the pswrite output and instead use DSC
comments to select the media. pswrite attempts to use the bbox deice to generate a
%%BoundingBox comment, but because this is a high-level device, no marks are made, so
the BoundingBox is 0 0 0 0.

Fixed by using the media size instead if this case is detected.

ps2write did not generate a %%BoundingBox, or any other DSC comment at all, because it
does not produce DSC PostScript (there is a request to address this already #690064).
Also the media selection in the ps2write output is disabled by default, forcing users
to find some means to set particular keys in userdict on the target device.

Fixed by emitting a %%BoundingBox equal to the media size of the first page (NB as
this is not DSC, other pages will be selected incorrectly if this is all the
application uses). Also allow the use of the /SetPageSize, /RotatePages and /FitPages
keys during ps2write processing to emit a PostScript file with these keys already
set, thus allowing media selection to take place without further user intervention.

Expected Differences
None

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@9373 a1074d23-0009-0410-80fe-cf8c14f379e6